--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.10",
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
+    "lodash": "^4.17.21",
     "quill-emoji": "^0.2.0",
     "quill-image-drop-module": "^1.0.3",
     "react": "^18.2.0",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@ant-design/icons": "^5.2.6",
     "@types/crypto-js": "^4.1.2",
+    "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
