--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ethersproject/providers": "^5.7.2",
+    "@metamask/detect-provider": "^2.0.0",
+    "@metamask/sdk-react-ui": "^0.14.1",
+    "@web3-react/core": "^8.2.3",
+    "@web3-react/injected-connector": "^6.0.7",
     "antd": "^5.11.2",
     "axios": "^1.6.0",
     "crypto-js": "^4.1.1",
@@ -22,7 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-echarts-core": "^1.0.2",
-    "react-quill": "^2.0.0",
+    "react-quill": "^0.0.2",
     "react-router-dom": "^6.16.0",
     "redux": "^4.2.1"
   },
@@ -43,6 +48,7 @@
     "less-loader": "^11.1.3",
     "styled-components": "^6.1.0",
     "vite": "^4.4.5",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-imp": "^2.4.0",
     "vite-plugin-windicss": "^1.9.1",
     "windicss": "^3.5.6"
