--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "react-echarts-core": "^1.0.2",
     "react-quill": "^0.0.2",
     "react-router-dom": "^6.16.0",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "web3": "^4.3.0"
   },
   "devDependencies": {
     "@ant-design/icons": "^5.2.6",
     "@types/crypto-js": "^4.1.2",
     "@types/lodash": "^4.14.202",
+    "@types/node": "^20.10.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
